Fix bug with content shift to right on mobile devices

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -61,6 +61,7 @@ table {
 
 .view {
   position: absolute;
+  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -181,8 +182,7 @@ table {
   cursor: pointer;
 }
 
-.current-project > img:hover,
-.current-project > img:focus {
+.current-project > img:hover {
   box-shadow: 0px 0px 2px 2px white;
   width: 72%;
 }
